fixed header image height on narrow screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,15 +188,10 @@ footer>p {
 
 
 /* HEADER IMAGE AND CAROUSEL */
-#carousel {
-    min-height: 20vh;
-    border-bottom: none;
-    /* background-color: gray; */
-}
-
 .headerImg {
     width: 100%;
-    min-height: 100%;
+    /* height: 100%; */
+    min-height: 15vh;
     object-fit: stretch;
 }
 
@@ -419,8 +414,6 @@ i {
 .table-danger, .table-warning{
     color: black;
 }
-
-
 
 .navbar-light .navbar-toggler-icon {
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Hamburger_icon_white.svg/32px-Hamburger_icon_white.svg.png');
